[FIX] Fix issues in WorkItem and restructuring